# ai-discipline-ollama-rag

./: .gitignore  README.md  pyproject.toml
documents/: README.md
src/ollama_rag/: __main__.py  chat.py  helpers.py
