[project]
name = "ollama-rag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kyle Alan Hale", email = "khale@rightpoint.com" }
]
dependencies = [
    "gradio>=4.22.0",
    "ollama>=0.1.7",
    "haystack-ai>=2.0.0",
    "ollama-haystack>=0.0.5",
    "pypdf>=4.1.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_rag"]
